tests/errors/substring_startidx.f90
program substring_noninteger_startidx
    implicit none
    character(len=8) :: s = "lfortran"
    print*, s(1.1:5)
end program substring_noninteger_startidx
